Updated Challenge 3 Title + Fixed Horizontal Scrolling Bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,13 @@ Project: Voter Registration
 General Styles
 ------------------------------------------------------------------- */
 
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 html {
 	overflow-y: scroll;
-	overflow-x: hidden;
 	-ms-overflow-style: scrollbar;
 }
 
